--- a/himan-lib/SConstruct
+++ b/himan-lib/SConstruct
@@ -28,6 +28,7 @@ libraries.append('boost_filesystem')
 libraries.append('boost_regex')
 libraries.append('eccodes')
 libraries.append('gdal')
+libraries.append('fmt')
 
 if env['HAVE_S3']:
 	libraries.append('s3')
