--- a/himan-bin/SConstruct
+++ b/himan-bin/SConstruct
@@ -27,7 +27,7 @@ libraries.append('boost_program_options')
 libraries.append('boost_system')
 
 env.Append(LIBS = libraries)
-env.Append(LIBS = [ 'dl', 'rt' ]) # for cudart_static
+env.Append(LIBS = [ 'fmt', 'dl', 'rt' ])
 
 # CFLAGS
 
