HIMAN-326: Update to gdal 3.2 and geos 3.9

--- a/himan-lib/SConstruct
+++ b/himan-lib/SConstruct
@@ -7,6 +7,7 @@ Import('env build_dir')
 
 # Includes
 
+env.Append(CPPPATH = ['/usr/geos39/include'])
 env.Append(CPPPATH = ['/usr/include'])
 
 # Library paths
