Correct removal of leading zero

--- a/himan-lib/Makefile
+++ b/himan-lib/Makefile
@@ -7,7 +7,7 @@ SCONS_FLAGS=-j $(NPROC)
 rpmsourcedir=/tmp/$(shell whoami)/rpmbuild
 
 .SILENT:createlink
-VERSION=$(shell date -u +%y).$(shell printf "%d" $(shell date -u +%m)).$(shell date -u +%d)
+VERSION=$(shell date -u +%y).$(shell date -u +%m | sed 's/^0*//').$(shell date -u +%d | sed 's/^0*//')
 RELEASE=$(shell date -u +%H%M).$(shell git rev-parse --short HEAD)
 
 # The rules
