Use $VERSION and $RELEASE from environment if they are set

--- a/himan-lib/Makefile
+++ b/himan-lib/Makefile
@@ -7,8 +7,14 @@ SCONS_FLAGS=-j $(NPROC)
 rpmsourcedir=/tmp/$(shell whoami)/rpmbuild
 
 .SILENT:createlink
-VERSION=$(shell date -u +%y).$(shell date -u +%m | sed 's/^0*//').$(shell date -u +%d | sed 's/^0*//')
-RELEASE=$(shell date -u +%H%M).$(shell git rev-parse --short HEAD)
+
+ifeq ($(VERSION),)
+  VERSION=$(shell date -u +%y).$(shell date -u +%m | sed 's/^0*//').$(shell date -u +%d | sed 's/^0*//')
+endif
+
+ifeq ($(RELEASE),)
+  RELEASE=$(shell date -u +%H%M).$(shell git rev-parse --short HEAD)
+endif
 
 # The rules
 
