--- a/himan-scripts/Makefile
+++ b/himan-scripts/Makefile
@@ -4,8 +4,13 @@ PROG = himan-scripts
 
 rpmsourcedir = /tmp/$(shell whoami)/rpmbuild
 
-VERSION=$(shell date -u +%y).$(shell date -u +%m | sed 's/^0*//').$(shell date -u +%d | sed 's/^0*//')
-RELEASE=$(shell date -u +%H%M).$(shell git rev-parse --short HEAD)
+ifeq ($(VERSION),)
+  VERSION=$(shell date -u +%y).$(shell date -u +%m | sed 's/^0*//').$(shell date -u +%d | sed 's/^0*//')
+endif
+
+ifeq ($(RELEASE),)
+  RELEASE=$(shell date -u +%H%M).$(shell git rev-parse --short HEAD)
+endif
 
 # The rules
 
