--- a/himan-bin/SConstruct
+++ b/himan-bin/SConstruct
@@ -27,7 +27,7 @@ libraries.append('boost_program_options')
 libraries.append('boost_system')
 
 env.Append(LIBS = libraries)
-env.Append(LIBS = [ 'fmt', 'dl', 'rt' ])
+env.Append(LIBS = [ 'fmt', 'dl', 'rt', 'gdal' ])
 
 # CFLAGS
 
