--- a/.github/workflows/rpmbuild.yaml
+++ b/.github/workflows/rpmbuild.yaml
@@ -107,7 +107,7 @@ jobs:
       shell: bash
       run: |
         cd himan-lib
-        yum-builddep -y himan-lib.spec --nobest
+        yum-builddep -y himan-lib.spec --nobest --allowerasing
         make rpm
     - name: Build himan-bin rpm
       id: build-himan-bin
@@ -115,7 +115,7 @@ jobs:
       shell: bash
       run: |
         cd himan-lib
-        yum-builddep -y himan-lib.spec --nobest
+        yum-builddep -y himan-lib.spec --nobest --allowerasing
         cd ../himan-bin
         yum-builddep -y himan-bin.spec
         make rpm
@@ -125,7 +125,7 @@ jobs:
       shell: bash
       run: |
         cd himan-plugins
-        yum-builddep -y himan-plugins.spec --nobest
+        yum-builddep -y himan-plugins.spec --nobest --allowerasing
         make rpm
     - name: Build himan-scripts rpm
       id: build-himan-scripts
