Build rhel9 based image and store to quay

--- a/.github/workflows/rpmbuild.yaml
+++ b/.github/workflows/rpmbuild.yaml
@@ -443,3 +443,34 @@ jobs:
         HOST: ${{ secrets.RPM_API_HOST_RHEL9 }}
       run: |
            find ${{ github.workspace }} -type f -name "*.rpm" -not -name "*debug*" -exec curl --show-error --fail -u $USER:$PASS -F file=@{} $HOST/api/upload \;
+
+  build-image-rhel9:
+    name: build-image-and-push-to-quay.io-rhel9
+    runs-on: ubuntu-latest
+    needs: sync-to-release-repo-rhel9
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Build image
+      id: build-image
+      uses: redhat-actions/buildah-build@v2
+      with:
+        image: himan
+        tags: latest-rhel9
+        containerfiles: Containerfile.rhel9
+    - name: Test image
+      uses: fmidev/podman-run-action@v1
+      with:
+        image: ${{ steps.build-image.outputs.image-with-tag }}
+        run: himan -d 5 -l
+    - name: Push to quay.io
+      id: push-to-quay
+      uses: redhat-actions/push-to-registry@v2
+      with:
+        image: ${{ steps.build-image-rhel9.outputs.image }}
+        tags: ${{ steps.build-image-rhel9.outputs.tags }}
+        registry: quay.io/fmi
+        username: ${{ secrets.QUAY_USER }}
+        password: ${{ secrets.QUAY_TOKEN }}
+    - name: Print image url
+      run: echo "Image pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
