--- a/.github/workflows/rpmbuild.yaml
+++ b/.github/workflows/rpmbuild.yaml
@@ -467,8 +467,8 @@ jobs:
       id: push-to-quay
       uses: redhat-actions/push-to-registry@v2
       with:
-        image: ${{ steps.build-image-rhel9.outputs.image }}
-        tags: ${{ steps.build-image-rhel9.outputs.tags }}
+        image: ${{ steps.build-image.outputs.image }}
+        tags: ${{ steps.build-image.outputs.tags }}
         registry: quay.io/fmi
         username: ${{ secrets.QUAY_USER }}
         password: ${{ secrets.QUAY_TOKEN }}
